--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -101,7 +101,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Portfolio</h2>
+					<h2>Opere</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
@@ -113,7 +113,7 @@
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
-						</div> <img src="img/portfolio/cabin.png"
+						</div> <img src="img/portfolio/grattacielo.png"
 						class="img-responsive" alt="Cabin">
 					</a>
 				</div>
@@ -124,7 +124,7 @@
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
-						</div> <img src="img/portfolio/cake.png"
+						</div> <img src="img/portfolio/corneille.png"
 						class="img-responsive" alt="Slice of cake">
 					</a>
 				</div>
@@ -346,7 +346,7 @@
 						<div class="modal-body">
 							<h2>Project Title</h2>
 							<hr class="star-primary">
-							<img src="img/portfolio/cabin.png"
+							<img src="img/portfolio/grattacielo.png"
 								class="img-responsive img-centered" alt="">
 							<p>
 								Use this area of the page to describe your project. The icon
@@ -388,27 +388,21 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<h2>Une scène tirée du Comte d’Essex</h2>
 							<hr class="star-primary">
-							<img src="img/portfolio/cake.png"
+							<img src="img/portfolio/corneille.png"
 								class="img-responsive img-centered" alt="">
 							<p>
-								Use this area of the page to describe your project. The icon
-								above is part of a free icon set by <a
-									href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On
-								their website, you can download their free set with 16 icons, or
-								you can purchase the entire set with 146 icons for only $12!
+								Sul palcoscenico la scenografia evoca una grande stanza dall’architettura barocca, 
+								circondata da monumentali colonne tortili con alternati motivi floreali, 
+								simili a quelle ideate dal Bernini per il Baldacchino di S. Pietro a Roma. 
+								La luce svolge un ruolo determinante: illumina la donna seduta 
+								al centro della composizione e ne fa la protagonista. 
+								Ella fissa lo spettatore e porta la mano destra al petto, 
+								probabilmente per aver ricevuto una notizia spiacevole dall’uomo alla sua sinistra.
 							</p>
 							<ul class="list-inline item-details">
-								<li>Client: <strong><a
-										href="http://startbootstrap.com">Start Bootstrap</a> </strong>
-								</li>
-								<li>Date: <strong><a
-										href="http://startbootstrap.com">April 2014</a> </strong>
-								</li>
-								<li>Service: <strong><a
-										href="http://startbootstrap.com">Web Development</a> </strong>
-								</li>
+								
 							</ul>
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">
