--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -70,38 +70,9 @@
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
 					<li class="page-scroll"><a href="#about">info</a></li>
 					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
-					<li class="page-scroll"><a href="#">Registrati</a></li>
-					<li class="dropdown"><a href="http://www.jquery2dotnet.com"
-						class="dropdown-toggle" data-toggle="dropdown">Accedi<b
-							class="caret"></b></a>
-						<ul class="dropdown-menu" style="padding: 15px; min-width: 250px;">
-							<li>
-								<div class="row">
-									<div class="col-md-12">
-										<form class="form" role="form" method="post" action="login"
-											accept-charset="UTF-8" id="login-nav">
-											<div class="form-group">
-												<label class="sr-only" for="username">Username</label> <input
-													type="email" class="form-control" id="username"
-													placeholder="username" required>
-											</div>
-											<div class="form-group">
-												<label class="sr-only" for="password">password</label> <input
-													type="password" class="form-control" id="password"
-													placeholder="password" required>
-											</div>
-											<div class="checkbox">
-												<label> <input type="checkbox"> Ricordami
-												</label>
-											</div>
-											<div class="form-group">
-												<button type="submit" class="btn btn-success btn-block">Accedi</button>
-											</div>
-										</form>
-									</div>
-								</div>
-							</li>
-						</ul>
+					<li class="page-scroll"><a href="/signIn">Registrati</a></li>
+					<li class="dropdown"><a href="/signUp">Accedi</a></li>
+				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
@@ -117,9 +88,8 @@
 					<div class="intro-text">
 						<h1 class="name">benvenuto</h1>
 						<hr class="star-light">
-						<span class="skills"> 
-						<a style="color:white" href="/welcome">WELCOME</a>
-					<a style="color:white" href="/admin">ADMIN</a></span>
+						<span class="skills"> <a style="color: white"
+							href="/welcome">WELCOME</a> <a style="color: white" href="/admin">ADMIN</a></span>
 					</div>
 				</div>
 			</div>
@@ -143,7 +113,7 @@
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
-						</div> <img src="img/portfolio/grattacielo.png" class="img-responsive"
+						</div> <img src="img/portfolio/grattecielo.png" class="img-responsive"
 						alt="Cabin">
 					</a>
 				</div>
