Fix vari, finalmente funziona, + pagina login bella

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="it" xmlns="http://www.w3.org/1999/xhtml"
+<html lang="it">
+<!-- per aggiungere thymeleaf: xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" -->
 <head>
 
 <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <title>Galleria d'Arte</title>
 
 <!-- Bootstrap Core CSSz -->
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom Fonts -->
 <link href="vendor/font-awesome/css/font-awesome.min.css"
@@ -26,7 +26,6 @@
 	rel="stylesheet" type="text/css">
 <!-- Theme CSS -->
 <link href="css/freelancer.min.css" rel="stylesheet">
-<link href="css/login.css" rel="stylesheet">
 
 <!-- Temporary navbar container fix -->
 <style>
@@ -70,8 +69,8 @@
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
 					<li class="page-scroll"><a href="#about">info</a></li>
 					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
-					<li class="page-scroll"><a href="/signIn">Registrati</a></li>
-					<li class="dropdown"><a href="/signUp">Accedi</a></li>
+					<li class="page-scroll"><a href="/signUp">Registrati</a></li>
+					<li class="dropdown"><a href="/login">Accedi</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
