--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <!-- per aggiungere thymeleaf: xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" -->
@@ -66,6 +68,8 @@
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="hidden"><a href="#page-top"></a></li>
+					<li class="page-scroll" sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin">Admin</a></li>
+					<li class="page-scroll">
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
 					<li class="page-scroll"><a href="#about">info</a></li>
 					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
