--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -74,7 +74,7 @@
 					<li class="page-scroll"><a href="#about">info</a></li>
 					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
 					<li class="page-scroll"><a href="/signUp">Registrati</a></li>
-					<li class="dropdown"><a href="/login">Accedi</a></li>
+					<li class="page-scroll"><a href="/login">Accedi</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
