Eliminata possibilita di avere utenti con lo stesso username

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -68,7 +68,8 @@
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="hidden"><a href="#page-top"></a></li>
-					<li class="page-scroll" sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin">Admin</a></li>
+					<li class="page-scroll" sec:authorize="hasRole('ROLE_ADMIN')"><a
+						href="/admin">Admin</a></li>
 					<li class="page-scroll">
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
 					<li class="page-scroll"><a href="#about">info</a></li>
