sistemata gestione autore e inseriti altri due quadri in prima pagina.

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="it" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-	
+
 <!-- per aggiungere thymeleaf: xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" -->
@@ -119,7 +119,7 @@
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
-						</div> <img src="img/portfolio/grattacielo.png" class="img-responsive"
+						</div> <img src="img/portfolio/naturamorta.png" class="img-responsive"
 						alt="Cabin">
 					</a>
 				</div>
@@ -141,7 +141,7 @@
 							<div class="caption-content">
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
-						</div> <img src="img/portfolio/circus.png" class="img-responsive"
+						</div> <img src="img/portfolio/onda.png" class="img-responsive"
 						alt="Circus tent">
 					</a>
 				</div>
@@ -350,9 +350,9 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<h2>Natura morta di frutta con fiori e due uccellini</h2>
 							<hr class="star-primary">
-							<img src="img/portfolio/grattacielo.png"
+							<img src="img/portfolio/naturamorta.png"
 								class="img-responsive img-centered" alt="">
 							<p>
 								Use this area of the page to describe your project. The icon
@@ -432,17 +432,18 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<h2>Il mare in burrasca</h2>
 							<hr class="star-primary">
-							<img src="img/portfolio/circus.png"
+							<img src="img/portfolio/onda.png"
 								class="img-responsive img-centered" alt="">
-							<p>
-								Use this area of the page to describe your project. The icon
-								above is part of a free icon set by <a
-									href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On
-								their website, you can download their free set with 16 icons, or
-								you can purchase the entire set with 146 icons for only $12!
-							</p>
+							<p>Il mare in burrasca detto anche “L’onda“ fu dipinto da
+								Gustave Courbet nel 1870. Il pittore ritrae il mare in burrasca
+								che si scaglia sulla riva di Etretat, una cittadina che si trova
+								in Normandia. Etretat è uno splendido villaggio di pescatori
+								collocato fra la suggestiva scogliera di la Falaise d’Amont e la
+								Falaise d’Aval. Meta di molti artisti, fu luogo di villeggiatura
+								di Guy de Maupassant, Jean-Baptiste Camille Corot e Gustave
+								Courbet.</p>
 							<ul class="list-inline item-details">
 								<li>Client: <strong><a
 										href="http://startbootstrap.com">Start Bootstrap</a> </strong>
