Creata home dinamica che carica le prime 6 opere, rifinito admin e completato

--- a/galleria/src/main/resources/static/index.html
+++ b/galleria/src/main/resources/static/index.html
@@ -70,14 +70,12 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="hidden"><a href="#page-top"></a></li>
 					<li class="page-scroll"></li>
-					<li class="page-scroll" sec:authorize="hasRole('ROLE_ADMIN')"><a
+					<li class="page-scroll"><a
 						href="/admin">Admin</a></li>
 					<li class="page-scroll">
 					<li class="page-scroll"><a href="#portfolio">opere</a></li>
 					<li class="page-scroll"><a href="#about">info</a></li>
 					<li class="page-scroll"><a href="#contact">chi siamo</a></li>
-					<li class="page-scroll"><a href="/signUp">Registrati</a></li>
-					<li class="page-scroll"><a href="/login">Accedi</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -92,10 +90,9 @@
 				<div class="col-lg-12">
 
 					<div class="intro-text">
-						<h1 class="name">benvenuto</h1>
+						<h1 class="name">Galleria D'arte</h1>
 						<hr class="star-light">
-						<span class="skills"> <a style="color: white"
-							href="/welcome">WELCOME</a> <a style="color: white" href="/admin">ADMIN</a></span>
+						<span class="skills"> Opere ~ Artisti ~ Stanze ~ Mostre</span>
 					</div>
 				</div>
 			</div>
